--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 <body>
     <div class="main-container">
         <header>
-            <nav class="menu">
                 <div class="logo">
-            <img src="../booki-starter-code/images/logo/Booki.png" alt="Logo Booki">
+                <img src="../booki-starter-code/images/logo/Booki.png" alt="Logo Booki">
                 </div>
-                <div class="links">
+                <nav>
                <a href="#hebergements">Hébergements</a>
                <a href="#activities-title">Activités</a>
-                </div>
+                </nav>
             </nav>
         </header>
 
@@ -39,7 +38,7 @@
                     <i class="fa-solid fa-location-dot"></i>
                         <input type="search" placeholder="Marseille, France">
                             <div class="search-button">
-                                <button><div class="magnifying-glass"><i class="fa-solid fa-magnifying-glass"></i></div>Rechercher</button>
+                                <div class="magnifying-glass"><i class="fa-solid fa-magnifying-glass"></i></div><button>Rechercher</button>
                             </div>
                 </form>
             </div>
