--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 
             <div class="filter">
                 <h2>Filtres</h2>
+                <div class="filter-buttons">
                 <button><i class="fa-solid fa-money-bill-wave"></i>Économique</button>
                 <button><i class="fa-solid fa-person"></i>Familial</button>
                 <button><i class="fa-solid fa-heart"></i>Romantique</button>
                 <button><i class="fa-solid fa-fire"></i>Nos pépites</button>
+                </div>
             </div>
 
             <div class="infobar">
