--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="search-bar">
-                <form action="" method="get">
+                <form action="#" method="get">
                     <i class="fa-solid fa-location-dot"></i>
                         <input type="search" placeholder="Marseille, France">
                             <div class="search-button">
@@ -326,7 +326,7 @@
             </div>
 
         </footer>
-    
+    </div>
 </body>
 
 </html>
