--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <body>
     <div class="main-container">
+
       <header>
         <div class="logo">
           <img src="../BOOKI/images/logo/Booki.png" alt="Logo Booki" />
@@ -32,12 +33,14 @@
         </nav>
       </header>
 
+
       <main>
         <div class="main-introduction">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
           <p>En plein centre-ville ou en pleine nature</p>
         </div>
 
+        <!-- BARRE RECHERCHE -->
         <div class="search-bar">
           <form action="#" method="get">
             <i class="fa-solid fa-location-dot"></i>
@@ -51,6 +54,7 @@
           </form>
         </div>
 
+        <!-- FILTRES -->
         <div class="filter">
           <h2>Filtres</h2>
           <div class="filter-buttons">
@@ -63,11 +67,13 @@
           </div>
         </div>
 
+        <!-- INFO BAR -->
         <div class="infobar">
           <i class="fa-solid fa-info"></i>
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
-
+        
+        
         <div class="hebergements-and-populaires">
           <!-- Hébergements à Marseille -->
           <section class="hebergements">
