Modifications suite soutenance

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <header>
         <div class="logo">
-          <img src="../BOOKI/images/logo/Booki.png" alt="Logo Booki" />
+          <img src="./images/logo/Booki.png" alt="Logo Booki" />
         </div>
         <nav>
           <a href="#hebergements">Hébergements</a>
@@ -33,7 +33,7 @@
         </nav>
       </header>
 
-
+      
       <main>
         <div class="main-introduction">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -83,7 +83,7 @@
             <div class="hebergements-cards">
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/fred-kleber.jpg"
+                  src="./images/hebergements/fred-kleber.jpg"
                   alt="Image de la chambre d'hôtel montrant deux lits"
                 />
                 <div class="card-content">
@@ -109,7 +109,7 @@
 
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/febrian-zakaria.jpg"
+                  src="./images/hebergements/febrian-zakaria.jpg"
                   alt="Image de la chambre d'hôtel montrant deux lits"
                 />
                 <div class="card-content">
@@ -135,7 +135,7 @@
 
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/reisetopia.jpg"
+                  src="./images/hebergements/reisetopia.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
                 />
                 <div class="card-content">
@@ -161,7 +161,7 @@
 
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/annie-spratt.jpg"
+                  src="./images/hebergements/annie-spratt.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
                 />
                 <div class="card-content">
@@ -187,7 +187,7 @@
 
               <article class="card">
                 <img
-                  src="../booki-starter-code/images/hebergements/marcus-loke.jpg"
+                  src="./images/hebergements/marcus-loke.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit superposé"
                 />
                 <div class="card-content">
@@ -213,7 +213,7 @@
 
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/nicate-lee.jpg"
+                  src="./images/hebergements/nicate-lee.jpg"
                   alt="Image de la chambre d'hôtel montrant des lits superposés"
                 />
                 <div class="card-content">
@@ -252,7 +252,7 @@
             <div class="populaires-cards">
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/emile-guillemot.jpg"
+                  src="./images/hebergements/emile-guillemot.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
                 />
                 <div class="card-content">
@@ -277,7 +277,7 @@
               </article>
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/aw-creative.jpg"
+                  src="./images/hebergements/aw-creative.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
                 />
                 <div class="card-content">
@@ -304,7 +304,7 @@
               </article>
               <article class="card">
                 <img
-                  src="../BOOKI/images/hebergements/febrian-zakaria2.jpg"
+                  src="./images/hebergements/febrian-zakaria2.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
                 />
                 <div class="card-content">
@@ -338,7 +338,7 @@
           <div class="activities-cards">
             <article class="card">
               <img
-                src="../BOOKI/images/activites/reno-laithienne.jpg"
+                src="./images/activites/reno-laithienne.jpg"
                 alt="Image du vieux port"
               />
               <div class="card-content">
@@ -350,7 +350,7 @@
 
             <article class="card">
               <img
-                src="../BOOKI/images/activites/paul-hermann.jpg"
+                src="./images/activites/paul-hermann.jpg"
                 alt="Image du fort de Pomègues"
               />
               <div class="card-content">
@@ -362,7 +362,7 @@
 
             <article class="card">
               <img
-                src="../BOOKI/images/activites/kilyan-sockalingum.jpg"
+                src="./images/activites/kilyan-sockalingum.jpg"
                 alt="Image du parc national des calanques"
               />
               <div class="card-content">
@@ -374,7 +374,7 @@
 
             <article class="card">
               <img
-                src="../BOOKI/images/activites/florian-wehde.jpg"
+                src="./images/activites/florian-wehde.jpg"
                 alt="Image de Notre-Dame-de-la-Garde"
               />
               <div class="card-content">
